tests/e2e/testdata/02_match_constraints_resource_rule_policy/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deployment-validator
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
        resourceNames: ["example-deployment"]
  validations:
    - expression: "has(object.metadata.labels)"
      message: "Deploymentにはラベルが必要です"
